--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,18 @@
-site: slug
 url: www.slugwurth.net
 title: slug
-description: Simple and minimalistic jekyll blogging theme.
-twitter:
-  username: #yourusername
-  card: summary
-  creator: #yourusername
+description: a blog for stories and projects
 author:
   twitter: #yourusername
-  name: #yourusername
+  name: slugwurth
   avatar:
   email: #youremail
   url: #yoururl
+  
 permalink: pretty
 
 baseurl: ""
 
-highlighter: none
+highlighter: rogue
 
 exclude:
   - .jekyll-cache
@@ -32,7 +28,8 @@ sass:
 plugins:
   - jekyll-paginate
   - jekyll-seo-tag
-  - jekyll-sitemap  
+  - jekyll-sitemap
+  - jekyll-tagging  
 
 collections:
   pages:
@@ -41,7 +38,7 @@ collections:
   posts:
     output: true
     permalink: /:year/:month/:day/:slug
-  
+
 defaults:
   -
     scope:
